--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "jszip": "^3.10.1",
+    "qrious": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-loading": "^2.0.3",
     "react-qrious": "^2.5.6",
     "react-spinners": "^0.15.0"
   },
